[package]
name = "llama-sys"
version = "0.1.1"
edition = "2021"
description = "bindings for llama.cpp"
license = "MIT"
repository = "https://github.com/iacore/llama-sys"

include = [
    "llama.cpp/ggml.*",
    "llama.cpp/llama.*",
    "Cargo.toml",
    "**/*.rs",
    "wrapper.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.64"
cc = "1.0"
